changing bootstrap sequence

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -128,45 +128,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of active groups = 5\n",
+      "number of active groups = 10\n",
       "No relay request\n",
-      "number of active groups = 5\n",
+      "number of active groups = 10\n",
       "No relay request\n",
-      "number of active groups = 5\n",
+      "number of active groups = 10\n",
       "No relay request\n",
-      "number of active groups = 5\n",
+      "number of active groups = 10\n",
+      "No relay request\n",
+      "number of active groups = 10\n",
       "selecting group at random\n",
-      "<agent.Group object at 0x11a259208>\n",
+      "<agent.Group object at 0x10e4d1128>\n",
       "registering new group\n",
-      "number of active groups = 5\n",
+      "number of active groups = 1\n",
       "selecting group at random\n",
-      "<agent.Group object at 0x11a259208>\n",
+      "<agent.Group object at 0x10d7e6c18>\n",
       "registering new group\n",
-      "number of active groups = 0\n",
+      "number of active groups = 2\n",
       "selecting group at random\n",
-      "no active groups available\n",
+      "<agent.Group object at 0x10e50c2e8>\n",
       "registering new group\n",
-      "number of active groups = 0\n",
+      "number of active groups = 3\n",
       "No relay request\n",
-      "number of active groups = 0\n",
-      "No relay request\n",
-      "number of active groups = 0\n",
+      "number of active groups = 3\n",
       "selecting group at random\n",
-      "no active groups available\n",
+      "<agent.Group object at 0x10d7e6c18>\n",
       "registering new group\n",
-      "number of active groups = 0\n",
+      "number of active groups = 3\n",
       "No relay request\n",
-      "number of active groups = 0\n",
+      "number of active groups = 2\n",
       "No relay request\n",
-      "number of active groups = 0\n",
+      "number of active groups = 1\n",
       "selecting group at random\n",
-      "no active groups available\n",
+      "<agent.Group object at 0x10e4d1710>\n",
       "registering new group\n",
-      "number of active groups = 0\n",
+      "number of active groups = 2\n",
       "No relay request\n",
-      "number of active groups = 0\n",
+      "number of active groups = 1\n",
       "selecting group at random\n",
-      "no active groups available\n",
+      "<agent.Group object at 0x10e4d1438>\n",
       "registering new group\n"
      ]
     },
